--- a/docker/default.conf
+++ b/docker/default.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
     index index.php index.html;
+    server_name localhost;
+
     root /var/www/public;
 
     location / {
@@ -9,7 +11,7 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass app:9000;
+        fastcgi_pass laravel_app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
