--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -10,11 +10,11 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi_params;
         fastcgi_pass laravel_app:9000;
         fastcgi_index index.php;
+        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
     }
 
     location ~ /\.ht {
