--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,30 @@
 version: '3.8'
 
 services:
-  app:
-    image: php:8.1-fpm
+  laravel_app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: laravel_app
-    working_dir: /var/www
     volumes:
-      - ./:/var/www
-    restart: unless-stopped
+      - .:/var/www
+    working_dir: /var/www
+    networks:
+      - laravel
 
-  nginx:
+  laravel_nginx:
     image: nginx:alpine
     container_name: laravel_nginx
     ports:
       - "8000:80"
     volumes:
-      - ./:/var/www/html
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - .:/var/www
     depends_on:
-      - app
-    restart: unless-stopped
+      - laravel_app
+    networks:
+      - laravel
 
-volumes:
-  pgdata:
+networks:
+  laravel:
+    driver: bridge
